Fix T46883: VSE Meta Strip crash on leaving Meta editing (tab).

Own stupid copy/paste error in recent commit.